fix(app): Remove max height on accordion components
This truncates the FileTree component height in some cases.

--- a/packages/openneuro-components/src/accordion/accordion.scss
+++ b/packages/openneuro-components/src/accordion/accordion.scss
@@ -11,7 +11,6 @@
     overflow: hidden;
     transition: max-height 0.3s cubic-bezier(1, 0, 1, 0);
     height: auto;
-    max-height: 9999px;
   }
 
   .accordion-item.collapsed {
